fix: resolve GridBackground syntax error and stabilize build
- Fixed JSX syntax issue
- Resolved Next.js compile failure
- Improved runtime stability
- Added motion enhancements

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -3,11 +3,20 @@
     "founders": "لمؤسسي الشركات",
     "international": "الدخول الدولي",
     "how": "كيف يعمل",
-    "cta": "انضم إلى البيتا"
+    "cta": "انضم إلى البيتا",
+    "joinBeta": "انضم إلى البيتا",
+    "getStarted": "ابدأ الآن",
+    "joinNow": "انضم الآن",
+    "explorePlatform": "استكشف المنصة",
+    "learnMore": "تعرف على المزيد",
+    "subscribe": "اشترك",
+    "subscribing": "جاري الاشتراك",
+    "subscribed": "تم الاشتراك"
   },
   "hero": {
     "eyebrow": "شبكة المؤسسين والمستثمرين الخاصة في الخليج",
-    "headline": "بناء في الخليج.<br><span class='accent'>متصل بالعالم.</span>",
+    "headline1": "بناء في الخليج.",
+    "headline2": "متصل بالعالم.",
     "sub": "منصة واحدة. كل برنامج، منحة، منطقة حرة، مسرع، ومستثمر عبر ست دول خليجية — مدعوم بالذكاء الاصطناعي، مجاني للمؤسسين، مبني من داخل الخليج.",
     "cta_primary": "احصل على الوصول المبكر — مجاني",
     "cta_ghost": "انظر كيف يعمل →",
@@ -189,5 +198,198 @@
     "copy": "© 2022–2025 MyFounders.Club. جميع الحقوق محفوظة. مسجل في المملكة العربية السعودية والإمارات العربية المتحدة.",
     "privacy": "سياسة الخصوصية",
     "terms": "الشروط والأحكام"
+  },
+  "common": {
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "delete": "حذف",
+    "edit": "تعديل",
+    "close": "إغلاق",
+    "logout": "تسجيل الخروج",
+    "login": "تسجيل الدخول",
+    "signup": "إنشاء حساب",
+    "submit": "إرسال",
+    "loading": "جاري التحميل...",
+    "error": "خطأ",
+    "success": "نجح",
+    "warning": "تحذير",
+    "info": "معلومة",
+    "back": "العودة",
+    "next": "التالي",
+    "previous": "السابق",
+    "search": "بحث",
+    "filter": "تصفية",
+    "sort": "ترتيب",
+    "download": "تحميل",
+    "upload": "رفع",
+    "copy": "نسخ",
+    "share": "شارك",
+    "more": "المزيد",
+    "less": "أقل",
+    "view": "عرض",
+    "hide": "إخفاء",
+    "show": "إظهار",
+    "apply": "تطبيق",
+    "confirm": "تأكيد",
+    "decline": "رفض",
+    "accept": "قبول",
+    "create": "إنشاء",
+    "update": "تحديث",
+    "remove": "إزالة",
+    "add": "إضافة",
+    "settings": "الإعدادات",
+    "profile": "الملف الشخصي",
+    "dashboard": "لوحة التحكم",
+    "home": "الرئيسية",
+    "about": "حول",
+    "contact": "التواصل",
+    "help": "مساعدة",
+    "language": "اللغة",
+    "en": "English",
+    "ar": "العربية",
+    "survey": "الاستبيان",
+    "questions": "هل لديك أسئلة؟",
+    "book_call": "احجز استشارة:"
+  },
+  "validation": {
+    "required": "هذا الحقل مطلوب",
+    "invalid_email": "عنوان بريد إلكتروني غير صالح",
+    "invalid_phone": "رقم هاتف غير صالح",
+    "password_too_short": "كلمة المرور قصيرة جداً (بحد أدنى 8 أحرف)",
+    "password_mismatch": "كلمات المرور غير متطابقة",
+    "field_required": "الحقل مطلوب",
+    "min_length": "يجب أن يكون الطول الأدنى {min}",
+    "max_length": "الحد الأقصى للطول {max}",
+    "invalid_format": "صيغة غير صالحة",
+    "already_exists": "موجود بالفعل"
+  },
+  "errors": {
+    "card_declined": "تم رفض البطاقة",
+    "insufficient_funds": "رصيد غير كافي",
+    "expired_card": "انتهت صلاحية البطاقة",
+    "incorrect_cvc": "رقم التحقق غير صحيح",
+    "processing_error": "خطأ في المعالجة",
+    "network_error": "خطأ في الشبكة",
+    "server_error": "خطأ في الخادم",
+    "not_found": "لم يتم العثور عليه",
+    "unauthorized": "غير مصرح",
+    "forbidden": "ممنوع",
+    "conflict": "تعارض",
+    "validation_error": "خطأ في التحقق",
+    "try_again": "حاول مرة أخرى",
+    "go_home": "الذهاب إلى الرئيسية"
+  },
+  "auth": {
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "confirm_password": "تأكيد كلمة المرور",
+    "first_name": "الاسم الأول",
+    "last_name": "اسم العائلة",
+    "forgot_password": "هل نسيت كلمة المرور؟",
+    "reset_password": "إعادة تعيين كلمة المرور",
+    "send_reset_link": "إرسال رابط إعادة التعيين",
+    "reset_link_sent": "تم إرسال رابط إعادة التعيين إلى بريدك الإلكتروني",
+    "create_new_password": "إنشاء كلمة مرور جديدة",
+    "password_reset_success": "تم إعادة تعيين كلمة المرور بنجاح",
+    "login_success": "تم تسجيل الدخول بنجاح",
+    "signup_success": "تم إنشاء الحساب بنجاح",
+    "logout_success": "تم تسجيل الخروج",
+    "account_created": "تم إنشاء الحساب. يرجى التحقق من بريدك الإلكتروني.",
+    "already_have_account": "هل لديك حساب بالفعل؟",
+    "dont_have_account": "ليس لديك حساب؟",
+    "remember_me": "تذكرني",
+    "agree_to_terms": "أوافق على الشروط والأحكام"
+  },
+  "payment": {
+    "subscription_id": "معرّف الاشتراك",
+    "billing_cycle": "دورة الفواتير",
+    "monthly": "شهري",
+    "annual": "سنوي",
+    "subscribe_to": "الاشتراك في {tier}",
+    "price": "السعر",
+    "total": "الإجمالي",
+    "payment_method": "طريقة الدفع",
+    "card_number": "رقم البطاقة",
+    "expiry_date": "تاريخ الانتهاء",
+    "cvc": "رمز التحقق",
+    "billing_address": "عنوان الفاتورة",
+    "payment_successful": "تم الدفع بنجاح",
+    "payment_failed": "فشل الدفع",
+    "go_to_dashboard": "الذهاب إلى لوحة التحكم",
+    "try_another_method": "جرب طريقة أخرى",
+    "refund_requested": "تم طلب استرجاع المبلغ"
+  },
+  "dashboard": {
+    "welcome": "مرحباً",
+    "overview": "نظرة عامة",
+    "analytics": "التحليلات",
+    "reports": "التقارير",
+    "users": "المستخدمون",
+    "applications": "الطلبات",
+    "settings": "الإعدادات",
+    "profile": "الملف الشخصي",
+    "my_applications": "طلباتي",
+    "my_profile": "ملفي الشخصي",
+    "manage_profile": "إدارة ملفي الشخصي",
+    "pending": "قيد الانتظار",
+    "approved": "موافق عليه",
+    "rejected": "مرفوض",
+    "action": "إجراء",
+    "status": "الحالة",
+    "date_applied": "تاريخ التقديم",
+    "last_updated": "آخر تحديث"
+  },
+  "admin": {
+    "admin_panel": "لوحة الإدارة",
+    "manage_users": "إدارة المستخدمين",
+    "manage_applications": "إدارة الطلبات",
+    "view_analytics": "عرض التحليلات",
+    "export_data": "تصدير البيانات",
+    "shortlist": "القائمة المختصرة",
+    "whatsapp": "واتس آب",
+    "download_csv": "تحميل CSV",
+    "download_json": "تحميل JSON",
+    "total_applications": "إجمالي الطلبات",
+    "total_users": "إجمالي المستخدمين",
+    "pending_review": "قيد المراجعة",
+    "filter_by": "التصفية حسب",
+    "sort_by": "الترتيب حسب"
+  },
+  "survey": {
+    "survey_title": "15 دقيقة",
+    "survey_subtitle": "ثلاث مكافآت",
+    "survey_description": "شارك رحلتك في ريادة الأعمال عبر الخليج — والعودة بمقدمات مستثمر موثوقة، برامج منتقاة تتطابق مع مرحلتك، وإمكانية الوصول الفوري إلى مجتمع المؤسسين.",
+    "reward_1": "مقدمات المستثمرين",
+    "reward_2": "البرامج المختارة",
+    "reward_3": "الوصول للمجتمع",
+    "start_survey": "ابدأ الاستبيان",
+    "survey_complete": "تم إكمال الاستبيان",
+    "thank_you": "شكراً لك!"
+  },
+  "final_cta": {
+    "ready": "هل أنت جاهز للوصول إلى فرص الخليج؟",
+    "submit_application": "قدّم طلبك الآن",
+    "decision_time": "القرار خلال 48 إلى 72 ساعة"
+  },
+  "about": {
+    "our_story": "قصتنا",
+    "our_mission": "مهمتنا",
+    "mission_description": "دعم المؤسسين من الفكرة إلى النطاق العالمي من خلال تجميع المجتمع ورأس المال والفرص."
+  },
+  "settings": {
+    "edit_profile": "تعديل الملف الشخصي",
+    "stage": "المرحلة",
+    "sector": "القطاع",
+    "location": "الموقع",
+    "bio": "السيرة الذاتية",
+    "company_info": "معلومات الشركة",
+    "delete_account": "حذف الحساب",
+    "delete_account_warning": "حذف الحساب نهائياً. هذا الإجراء غير قابل للتراجع.",
+    "privacy_settings": "إعدادات الخصوصية",
+    "notification_settings": "إعدادات الإشعارات",
+    "account": "الحساب",
+    "change_password": "تغيير كلمة المرور",
+    "save_changes": "حفظ التغييرات",
+    "updated_successfully": "تم التحديث بنجاح"
   }
 }
