--- a/locales/en.json
+++ b/locales/en.json
@@ -7,7 +7,8 @@
   },
   "hero": {
     "eyebrow": "The Gulf's Private Founder & Investor Network",
-    "headline": "Build in the Gulf.<br><span class='accent'>Wired to</span><br>the World.",
+    "headline1": "Build in the Gulf.",
+    "headline2": "Wired to the World.",
     "sub": "One platform. Every program, grant, free zone, accelerator, and investor across six GCC countries — AI-powered, free for founders, built from inside the Gulf.",
     "cta_primary": "Get Early Access — Free",
     "cta_ghost": "See how it works →",
@@ -189,5 +190,198 @@
     "copy": "© 2022–2025 MyFounders.Club. All rights reserved. Registered in Saudi Arabia & UAE.",
     "privacy": "Privacy Policy",
     "terms": "Terms & Conditions"
+  },
+  "common": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "edit": "Edit",
+    "close": "Close",
+    "logout": "Logout",
+    "login": "Login",
+    "signup": "Sign Up",
+    "submit": "Submit",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "warning": "Warning",
+    "info": "Information",
+    "back": "Back",
+    "next": "Next",
+    "previous": "Previous",
+    "search": "Search",
+    "filter": "Filter",
+    "sort": "Sort",
+    "download": "Download",
+    "upload": "Upload",
+    "copy": "Copy",
+    "share": "Share",
+    "more": "More",
+    "less": "Less",
+    "view": "View",
+    "hide": "Hide",
+    "show": "Show",
+    "apply": "Apply",
+    "confirm": "Confirm",
+    "decline": "Decline",
+    "accept": "Accept",
+    "create": "Create",
+    "update": "Update",
+    "remove": "Remove",
+    "add": "Add",
+    "settings": "Settings",
+    "profile": "Profile",
+    "dashboard": "Dashboard",
+    "home": "Home",
+    "about": "About",
+    "contact": "Contact",
+    "help": "Help",
+    "language": "Language",
+    "en": "English",
+    "ar": "العربية",
+    "survey": "Survey",
+    "questions": "Questions?",
+    "book_call": "Book a Call:"
+  },
+  "validation": {
+    "required": "This field is required",
+    "invalid_email": "Invalid email address",
+    "invalid_phone": "Invalid phone number",
+    "password_too_short": "Password too short (minimum 8 characters)",
+    "password_mismatch": "Passwords do not match",
+    "field_required": "Field is required",
+    "min_length": "Minimum length is {min}",
+    "max_length": "Maximum length is {max}",
+    "invalid_format": "Invalid format",
+    "already_exists": "Already exists"
+  },
+  "errors": {
+    "card_declined": "Card Declined",
+    "insufficient_funds": "Insufficient Funds",
+    "expired_card": "Expired Card",
+    "incorrect_cvc": "Incorrect CVC",
+    "processing_error": "Processing Error",
+    "network_error": "Network Error",
+    "server_error": "Server Error",
+    "not_found": "Not Found",
+    "unauthorized": "Unauthorized",
+    "forbidden": "Forbidden",
+    "conflict": "Conflict",
+    "validation_error": "Validation Error",
+    "try_again": "Try Again",
+    "go_home": "Go Home"
+  },
+  "auth": {
+    "email": "Email",
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "first_name": "First Name",
+    "last_name": "Last Name",
+    "forgot_password": "Forgot Password?",
+    "reset_password": "Reset Password",
+    "send_reset_link": "Send Reset Link",
+    "reset_link_sent": "Reset link sent to your email",
+    "create_new_password": "Create New Password",
+    "password_reset_success": "Password reset successfully",
+    "login_success": "Logged in successfully",
+    "signup_success": "Account created successfully",
+    "logout_success": "Logged out",
+    "account_created": "Account created. Please check your email.",
+    "already_have_account": "Already have an account?",
+    "dont_have_account": "Don't have an account?",
+    "remember_me": "Remember me",
+    "agree_to_terms": "I agree to the Terms & Conditions"
+  },
+  "payment": {
+    "subscription_id": "Subscription ID",
+    "billing_cycle": "Billing Cycle",
+    "monthly": "Monthly",
+    "annual": "Annual",
+    "subscribe_to": "Subscribe to {tier}",
+    "price": "Price",
+    "total": "Total",
+    "payment_method": "Payment Method",
+    "card_number": "Card Number",
+    "expiry_date": "Expiry Date",
+    "cvc": "CVC",
+    "billing_address": "Billing Address",
+    "payment_successful": "Payment successful",
+    "payment_failed": "Payment failed",
+    "go_to_dashboard": "Go to Dashboard",
+    "try_another_method": "Try Another Method",
+    "refund_requested": "Refund requested"
+  },
+  "dashboard": {
+    "welcome": "Welcome",
+    "overview": "Overview",
+    "analytics": "Analytics",
+    "reports": "Reports",
+    "users": "Users",
+    "applications": "Applications",
+    "settings": "Settings",
+    "profile": "Profile",
+    "my_applications": "My Applications",
+    "my_profile": "My Profile",
+    "manage_profile": "Manage Profile",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "action": "Action",
+    "status": "Status",
+    "date_applied": "Date Applied",
+    "last_updated": "Last Updated"
+  },
+  "admin": {
+    "admin_panel": "Admin Panel",
+    "manage_users": "Manage Users",
+    "manage_applications": "Manage Applications",
+    "view_analytics": "View Analytics",
+    "export_data": "Export Data",
+    "shortlist": "Shortlist",
+    "whatsapp": "WhatsApp",
+    "download_csv": "Download CSV",
+    "download_json": "Download JSON",
+    "total_applications": "Total Applications",
+    "total_users": "Total Users",
+    "pending_review": "Pending Review",
+    "filter_by": "Filter By",
+    "sort_by": "Sort By"
+  },
+  "survey": {
+    "survey_title": "15 minutes",
+    "survey_subtitle": "Three rewards",
+    "survey_description": "Share your entrepreneurial journey across the Gulf — and walk away with verified investor introductions, curated programs matching your stage, and instant access to the founder community.",
+    "reward_1": "Investor Introductions",
+    "reward_2": "Curated Programs",
+    "reward_3": "Community Access",
+    "start_survey": "Start Survey",
+    "survey_complete": "Survey Complete",
+    "thank_you": "Thank You!"
+  },
+  "final_cta": {
+    "ready": "Ready to Access Gulf Opportunities?",
+    "submit_application": "Submit Your Application Now",
+    "decision_time": "Decision in 48 to 72 hours"
+  },
+  "about": {
+    "our_story": "Our Story",
+    "our_mission": "Our Mission",
+    "mission_description": "Support founders from idea to global scale by curating community, capital and opportunities."
+  },
+  "settings": {
+    "edit_profile": "Edit Profile",
+    "stage": "Stage",
+    "sector": "Sector",
+    "location": "Location",
+    "bio": "Bio",
+    "company_info": "Company Information",
+    "delete_account": "Delete Account",
+    "delete_account_warning": "Permanently delete account. This action cannot be undone.",
+    "privacy_settings": "Privacy Settings",
+    "notification_settings": "Notification Settings",
+    "account": "Account",
+    "change_password": "Change Password",
+    "save_changes": "Save Changes",
+    "updated_successfully": "Updated Successfully"
   }
 }
